--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
   const scoreBoard = document.querySelector('.score');
   const moles = document.querySelectorAll('.mole');
 
+  function randTime(min,max){
+    return Math.round(Math.random() * (max-min) + min);
+  }
+
+  function randHole(holes){
+    const index = Math.floor(Math.random() * holes.length);
+    const hole = holes[index];
+  }
+  
 </script>
 </body>
 </html>
