--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
     return hole;
   }
 
+  function peep(){
+    const time = randTime(200, 1000);
+    const hole = randHole(holes);
+    hole.classList.add('up');
+
+    setTimeout(() => {
+      hole.classList.remove('up');
+    }, time);
+
+  }
+
 
 
 </script>
