added div for high score

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     </div>
   </div>
 
+  <div class="high-score">
+    <label for="high-score-value">High Score: </label>
+    <p name="high-score-value">0</p>
+  </div>
+
 <script>
   const holes = document.querySelectorAll('.hole');
   const scoreBoard = document.querySelector('.score');
