--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
 
-  <h1>Whack-a-mole! <span class="score">0</span></h1>
+  <div class="container1">
   <button onClick="startGame()">Start!</button>
+</div>
+
+  <div class="container2">
+  <h1>Whack-a-mole! <span class="score">0</span></h1>
+  
 
   <div class="game">
     <div class="hole hole1">
@@ -31,11 +36,15 @@
       <div class="mole"></div>
     </div>
   </div>
+</div>
+
+<div class="container3">
 
   <div class="high-score">
     <label for="high-score-value">High Score: </label>
     <p name="high-score-value">0</p>
   </div>
+</div>
 
 <script>
   const holes = document.querySelectorAll('.hole');
