updated more css styling

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <div class="high-score">
     <label for="high-score-value">High Score: </label>
-    <p name="high-score-value">0</p>
+    <p name="high-score-value" class="high-score-value">0</p>
   </div>
 </div>
 
