--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+  <div class='sun'>
+    <span class='sun-eyeL'></span>
+      <span class='pupilL'></span>
+    <span class='sun-eyeR'></span>
+      <span class='pupilR'></span>
+    <div class='sun-smile'></div>
+  </div>
+
+
   <div class="container1">
   <button onClick="startGame()">Start!</button>
 </div>
@@ -106,6 +115,7 @@
     localStorage.clear();
     localStorage.setItem('highScore',score);
     highScoreBoard.textContent = localStorage.getItem('highScore');
+    highScoreBoard.classList.add('increasing');
     };
   }
 
