coded speech bubble for sun saying 'nice, new high score'

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <span class='sun-eyeR'></span>
       <span class='pupilR'></span>
     <div class='sun-smile'></div>
+    <span class='sun-speech'>
+      <span class='bubble'>
+        <p>"Nice, new high score!"</p>
+      </span>
+      <span class='notch'></span>
+    </span>
   </div>
 
 
