--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+  <!--HTML FOR SUN EFFECT-->
   <div class='sun'>
     <span class='sun-eyeL'></span>
       <span class='pupilL'></span>
@@ -21,8 +22,9 @@
       <span class='notch'></span>
     </span>
   </div>
+  <!--END HTML FOR SUN EFFECT-->
 
-
+  <!--FUNCTIONAL HTML BELOW-->
   <div class="container1">
   <button onClick="startGame()">Start!</button>
 </div>
